chore(webapp): clean up more compiler warnings